# VaultSign

./: .gitignore  README.md  SECURITY.md  pyproject.toml
docs/superpowers/plans/: 2026-03-11-crypto-signer.md  2026-03-13-audit-fixes.md  2026-03-13-remove-solana-uv-integration.md  2026-03-14-robustness-fixes.md  2026-03-18-key-delivery.md  2026-03-18-runtime-hardening-fixes.md  2026-03-20-review-findings-fix.md
docs/superpowers/specs/: 2026-03-11-crypto-signer-design.md  2026-03-13-remove-solana-uv-integration-design.md  2026-03-14-robustness-fixes-design.md  2026-03-18-key-delivery-design.md  2026-03-18-runtime-hardening-fixes-design.md  2026-03-20-review-findings-fix-design.md
src/crypto_signer/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  keystore.py  server.py  state.py
src/crypto_signer/crypto/: evm.py  solana.py
src/crypto_signer/security/: harden.py  platform.py  platform_unix.py  platform_win.py  safe_input.py  zeroize.py
src/crypto_signer/web3/: __init__.py  middleware.py
src/vaultsign/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  keystore.py  server.py  state.py  transport.py
src/vaultsign/crypto/: evm.py
src/vaultsign/security/: platform_win.py
src/vaultsign/web3/: __init__.py  middleware.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_crypto_evm.py  test_crypto_solana.py  test_errors.py  test_integration.py  test_keystore.py  test_platform.py  test_security.py  test_server.py  test_state.py  test_transport.py  test_web3_middleware.py
