[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultsign"
version = "0.1.0"
description = "Encrypted key vault and memory-resident signing service for crypto automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "argon2-cffi>=23.1",
    "cryptography>=41.0",
    "eth-account>=0.11",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
web3 = ["web3>=6.0"]
win = ["pywin32>=306"]

[project.scripts]
vaultsign = "vaultsign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultsign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21",
]
